[package]
name = "fastwebsockets"
description = "A fast RFC6455 WebSocket server implementation"
version = "0.7.1"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/conradludgate/fastwebsockets"

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = ["upgrade"]

[[example]]
name = "autobahn_client"
path = "examples/autobahn_client.rs"
required-features = ["upgrade"]

[[example]]
name = "tls_client"
path = "examples/tls_client.rs"
required-features = ["upgrade"]

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["upgrade", "with_axum"]

[dependencies]
futures-core = "0.3"
futures-sink = "0.3"
tokio = { version = "1.25.0",  default-features = false, features = ["io-util"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
hyper-util = { version = "0.1.0", features = ["tokio"] }
http-body-util = { version = "0.1.0" }
hyper = { version = "1", features = ["http1", "server", "client"] }
pin-project = { version = "1.0.8" }
base64 = { version = "0.21.0" }
sha1 = { version = "0.10.5" }
utf-8 = "0.7.5"
rand = "0.8.4"
thiserror = "1.0.40"
bytes = "1.5.0"

# Axum integration
axum-core = { version = "0.4.3", optional = true }
http = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = []

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full", "macros"] }
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0"
hyper-util = { version = "0.1.0", features = ["tokio"] }
http-body-util = { version = "0.1.0" }
hyper = { version = "1", features = ["http1", "server", "client"] }
assert2 = "0.3.4"
trybuild = "1.0.80"
criterion = "0.4.0"
anyhow = "1.0.71"
webpki-roots = "0.23.0"
bytes = "1.4.0"
axum = "0.7.4"

[[bench]]
name = "unmask"
harness = false

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.docs.rs]
features = ["upgrade", "with_axum"]
